JFix 'jumping scrollbar' issue

--- a/src/components/common/common-styles.css
+++ b/src/components/common/common-styles.css
@@ -2,6 +2,11 @@
   scroll-behavior: smooth;
 }
 
+html {
+  width:100vw;
+  overflow-x:hidden;
+}
+
 body {
   background: #eee !important;
 }
